# LPG-language-server

./: .gitignore  .gitmodules  CMakeLists.txt  LPG-language-server.sln  README.md
.github/workflows/: ci.yml
LPG-language-server/: LPG-language-server.vcxproj  LPG-language-server.vcxproj.filters  packages.config
LPG-language-server/grammar/: LPGKWLexer.gi  LPGLexer.gi  LPGParser.g
LPG-language-server/src/: ASTUtils.cpp  ASTUtils.h  CompilationUnit.cpp  CompilationUnit.h  DependencyUtil.h  LEGDocumentationProvider.cpp  LEGDocumentationProvider.h  LPG-language-server.cpp  LPGKWLexer.h  LPGKWLexersym.h  LPGLexer.h  LPGLexerprs.h  LPGLexersym.h  LPGParser.cpp  LPGParser.h  LPGParsersym.h  SearchPolicy.h  WorkSpaceManager.cpp  WorkSpaceManager.h  code.h  lex_utils.cc  lex_utils.h  lru_cache.h  timer.cpp  timer.h  utils.cpp  utils.h  working_files.cpp  working_files.h
LPG-language-server/src/message/: Analysis.cpp  CompletionHandler.cpp  DocumentColorHandler.cpp  DocumentFormatHandler.cpp  DocumentSymbolHandler.cpp  FoldingRangeHandler.cpp  HoverHandler.cpp  MessageHandler.h  NavigateToDefinitionHandler.cpp  Refactoring.cpp  ReferencesHandler.cpp  ReferencesOrRenameHandler.cpp  SemanticTokensHandler.cpp  text_document_document_symbol.cpp
LPG-language-server/src/parser/: Binding.cpp  JikesPGOptionDesc.cpp  JikesPGOptionParser.cpp  JikesPGOptionValues.cpp  JikesPGOptions.cpp  JikesPGOptions.h  JikesPGUtil.cpp  JikesPGUtil.h  JiksPGControl.cpp  JiksPGControl.h  JiksPgOption.cpp  JiksPgOption.h  LPGKWLexer.h  LPGKWLexerprs.h  LPGKWLexersym.h  LPGLexer.h  LPGLexerprs.h  LPGLexersym.h  LPGParser.cpp  LPGParser.h  LPGParser_top_level_ast.cpp  LPGParser_top_level_ast.h  LPGParserprs.h  LPGParsersym.h  LpgData.h  ParseData.h  base.cpp  base.h  buffer.cpp  buffer.h  dfa.cpp  dfa.h  grammar.cpp  grammar.h  lpgErrorCode.h  node.h  partition.h  pda.cpp  pda.h  produce.cpp  (+6 more)
